--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@statelyai/inspect": "^0.4.0",
 		"@tanstack/react-router": "^1.87.1",
-		"partykit": "^0.0.111",
-		"partysocket": "^1.0.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"@xstate/react": "^5.0.1",
+		"convex": "^1.17.4",
+		"convex-helpers": "^0.1.67",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"xstate": "^5.19.1",
+		"yaml": "^2.7.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@modyfi/vite-plugin-yaml": "^1.1.0",
 		"@tanstack/router-devtools": "^1.87.1",
 		"@tanstack/router-plugin": "^1.86.0",
-		"@types/react": "^18.0.27",
-		"@types/react-dom": "^18.0.10",
-		"@vitejs/plugin-react": "^3.1.0",
+		"@types/react": "^19.0.2",
+		"@types/react-dom": "^19.0.2",
+		"@vitejs/plugin-react": "^4.3.4",
 		"typescript": "^5.7.2",
-		"vite": "^4.1.0"
+		"vite": "^6.0.6"
 	}
 }
