feat: very last minute changes

--- a/src/data/s1e3/categories.yml
+++ b/src/data/s1e3/categories.yml
@@ -1,13 +1,12 @@
 - name: CSS
   sponsor: CodePen
 
-- name: SQL
-  sponsor: Neon
+- name: Team Dynamics
 
-- name: Auth
+- name: Web Security
   sponsor: Clerk
 
-- name: Accessibility
+- name: Animation
 
-- name: Search
-  sponsor: Algolia
+- name: Dev Lore
+  sponsor: Neon
