feat: ready for 2nd game

--- a/src/data/s1e3/categories.yml
+++ b/src/data/s1e3/categories.yml
@@ -1,12 +1,12 @@
 - name: CSS
   sponsor: CodePen
 
-- name: Team Dynamics
+- name: Acronyms
 
-- name: Web Security
+- name: Authentication
   sponsor: Clerk
 
-- name: Animation
+- name: Accessibility
 
-- name: Dev Lore
+- name: Shipping Fast
   sponsor: Neon
