--- a/src/data/s1e3/questions.yml
+++ b/src/data/s1e3/questions.yml
@@ -346,5 +346,5 @@
   category: Authentication
   round: 2
   text: Which HTTP status code indicates an "not authorized" error?
-  answer: 401
+  answer: '401'
 f
